# app/controllers/author.controller.go
@@ -1,0 +1,333 @@
+package controllers
+
+import (
+	"time"
+
+	"github.com/create-go-app/fiber-go-template/app/models"
+	"github.com/create-go-app/fiber-go-template/app/services"
+	"github.com/create-go-app/fiber-go-template/pkg/utils"
+	"github.com/gofiber/fiber/v2"
+	"github.com/gofrs/uuid"
+)
+
+type AuthorController struct {
+	AuthorService services.AuthorService
+}
+
+func NewAuthorController(service services.AuthorService) AuthorController {
+	return AuthorController{
+		AuthorService: service,
+	}
+}
+
+// GetAuthors func gets all exists authors.
+// @Description Get all exists authors.
+// @Summary get all exists authors
+// @Tags Author
+// @Accept json
+// @Produce json
+// @Success 200 {array} models.Author
+// @Security ApiKeyAuth
+// @Router /v1/authors [get]
+func (h *AuthorController) GetAll(c *fiber.Ctx) error {
+	books, err := h.AuthorService.GetAll()
+	if err != nil {
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
+			"error": true,
+			"msg":   "books were not found",
+			"count": 0,
+			"books": nil,
+		})
+	}
+
+	return c.JSON(fiber.Map{
+		"error": false,
+		"msg":   nil,
+		"count": len(books),
+		"books": books,
+	})
+}
+
+// GetBook func gets book by given ID or 404 error.
+// @Description Get book by given ID.
+// @Summary get book by given ID
+// @Tags Author
+// @Accept json
+// @Produce json
+// @Param id path string true "Author ID"
+// @Success 200 {object} models.Author
+// @Router /v1/author/{id} [get]
+func (h *AuthorController) FindByID(c *fiber.Ctx) error {
+	// Catch book ID from URL.
+	id, err := uuid.FromString(c.Params("id"))
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Get book by ID.
+	book, err := h.AuthorService.FindByID(id)
+	if err != nil {
+		// Return, if book not found.
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
+			"error": true,
+			"msg":   "book with the given ID is not found",
+			"book":  nil,
+		})
+	}
+
+	// Return status 200 OK.
+	return c.JSON(fiber.Map{
+		"error": false,
+		"msg":   nil,
+		"book":  book,
+	})
+}
+
+// CreateBook func for creates a new book.
+// @Description Create a new book.
+// @Summary create a new book
+// @Tags Author
+// @Accept json
+// @Produce json
+// @Param data body models.AuthorRequest true "Author"
+// @Success 200 {object} models.Author
+// @Security ApiKeyAuth
+// @Router /v1/author [post]
+func (h *AuthorController) Create(c *fiber.Ctx) error {
+	// Get now time.
+	now := time.Now().Unix()
+
+	// Get claims from JWT.
+	claims, err := utils.ExtractTokenMetadata(c)
+	if err != nil {
+		// Return status 500 and JWT parse error.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Set expiration time from JWT data of current book.
+	expires := claims.Expires
+
+	// Checking, if now time greather than expiration from JWT.
+	if now > expires {
+		// Return status 401 and unauthorized error message.
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{
+			"error": true,
+			"msg":   "unauthorized, check expiration time of your token",
+		})
+	}
+
+	// Create new Book struct
+	var request models.AuthorRequest
+
+	// Check, if received JSON data is valid.
+	if err := c.BodyParser(&request); err != nil {
+		// Return status 400 and error message.
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Create a new validator for a Book model.
+	validate := utils.NewValidator()
+
+	// Validate book fields.
+	if err := validate.Struct(request); err != nil {
+		// Return, if some fields are not valid.
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": true,
+			"msg":   utils.ValidatorErrors(err),
+		})
+	}
+
+	// Create book by given model.
+	data, err := h.AuthorService.Create(request)
+	if err != nil {
+		// Return status 500 and error message.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Return status 200 OK.
+	return c.JSON(fiber.Map{
+		"error": false,
+		"msg":   nil,
+		"book":  data,
+	})
+}
+
+// UpdateBook func for updates book by given ID.
+// @Description Update book.
+// @Summary update book
+// @Tags Author
+// @Accept json
+// @Produce json
+// @Param id path string true "Author ID"
+// @Param data body models.AuthorRequest true "Author"
+// @Success 202 {string} status "ok"
+// @Security ApiKeyAuth
+// @Router /v1/author/{id} [put]
+func (h *AuthorController) Update(c *fiber.Ctx) error {
+	id, err := uuid.FromString(c.Params("id"))
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Get now time.
+	now := time.Now().Unix()
+
+	// Get claims from JWT.
+	claims, err := utils.ExtractTokenMetadata(c)
+	if err != nil {
+		// Return status 500 and JWT parse error.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Set expiration time from JWT data of current book.
+	expires := claims.Expires
+
+	// Checking, if now time greather than expiration from JWT.
+	if now > expires {
+		// Return status 401 and unauthorized error message.
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{
+			"error": true,
+			"msg":   "unauthorized, check expiration time of your token",
+		})
+	}
+
+	// Create new Book struct
+	var author models.AuthorRequest
+
+	// Check, if received JSON data is valid.
+	if err := c.BodyParser(&author); err != nil {
+		// Return status 400 and error message.
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Checking, if book with given ID is exists.
+	foundedAuthor, err := h.AuthorService.FindByID(id)
+	if err != nil {
+		// Return status 404 and book not found error.
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
+			"error": true,
+			"msg":   "book with this ID not found",
+		})
+	}
+
+	// Create a new validator for a Book model.
+	validate := utils.NewValidator()
+
+	// Validate book fields.
+	if err := validate.Struct(author); err != nil {
+		// Return, if some fields are not valid.
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": true,
+			"msg":   utils.ValidatorErrors(err),
+		})
+	}
+
+	// Update book by given ID.
+	data, err := h.AuthorService.Update(foundedAuthor.ID, author)
+	if err != nil {
+		// Return status 500 and error message.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Return status 201.
+	return c.Status(fiber.StatusCreated).JSON(fiber.Map{
+		"error": false,
+		"msg":   "success",
+		"data":  data,
+	})
+
+}
+
+// DeleteBook func for deletes book by given ID.
+// @Description Delete book by given ID.
+// @Summary delete book by given ID
+// @Tags Author
+// @Accept json
+// @Produce json
+// @Param id path string true "Author ID"
+// @Success 204 {string} status "ok"
+// @Security ApiKeyAuth
+// @Router /v1/author/{id} [delete]
+func (h *AuthorController) Delete(c *fiber.Ctx) error {
+	id, err := uuid.FromString(c.Params("id"))
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Get now time.
+	now := time.Now().Unix()
+
+	// Get claims from JWT.
+	claims, err := utils.ExtractTokenMetadata(c)
+	if err != nil {
+		// Return status 500 and JWT parse error.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	// Set expiration time from JWT data of current book.
+	expires := claims.Expires
+
+	// Checking, if now time greather than expiration from JWT.
+	if now > expires {
+		// Return status 401 and unauthorized error message.
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{
+			"error": true,
+			"msg":   "unauthorized, check expiration time of your token",
+		})
+	}
+
+	// Checking, if book with given ID is exists.
+	foundedBook, err := h.AuthorService.FindByID(id)
+	if err != nil {
+		// Return status 404 and book not found error.
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
+			"error": true,
+			"msg":   "book with this ID not found",
+		})
+	}
+
+	// Set user ID from JWT data of current user.
+	err = h.AuthorService.Delete(foundedBook.ID)
+	if err != nil {
+		// Return status 500 and error message.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	return c.Status(fiber.StatusCreated).JSON(fiber.Map{
+		"error": false,
+		"msg":   "success",
+	})
+}
